Fix justify align

--- a/app/assets/stylesheets/pages/_services.scss
+++ b/app/assets/stylesheets/pages/_services.scss
@@ -27,25 +27,25 @@
   h2 {
     font-weight: 800;
     font-size: 48px;
-    text-align: left;
+    text-align: justify;
   }
   h4 {
     font-weight: 800;
     font-size: 26px;
     line-height: 48px;
-    text-align: left;
+    text-align: justify;
   }
   p {
     font-weight: 500;
     font-size: 18px;
     line-height: 40px;
-    text-align: left;
+    text-align: justify;
   }
   h6 {
     font-weight: 800;
     font-size: 18px;
     color: $purple;
-    text-align: left;
+    text-align: justify;
     line-height: 32px;
   }
   h3 {
